just need to fix the user message exchange